Fix spacing in Sheet, i18n fix

--- a/src/stylesheets/_main.scss
+++ b/src/stylesheets/_main.scss
@@ -25,7 +25,7 @@ h1, h2, h3, h4 {
 }
 
 body {
-  font-family: sofia-pro-soft, sans-serif;
+  font-family: sofia-pro-soft, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   font-weight: 400;
   font-style: normal;
 }
